--- a/index.html
+++ b/index.html
@@ -73,6 +73,9 @@
                 <!-- Completed quests will be shown here -->
             </div>
         </div>
+        <div class="settings-panel">
+            <button id="reset-game-btn" class="danger-btn">Reset Game Data</button>
+        </div>
     </div>
     
     <div id="level-up-modal" class="modal">
@@ -81,6 +84,19 @@
             <p>Congratulations! You've reached level <span id="new-level">2</span>!</p>
             <p>New rank: <span id="new-rank">Bronze Novice 🎖️</span></p>
             <button id="close-modal">Continue</button>
+        </div>
+    </div>
+        
+    <div id="reset-modal" class="modal">
+        <div class="modal-content">
+            <h2>⚠️ Reset Game Data</h2>
+            <p>This will delete ALL game progress and cannot be undone!</p>
+            <p>Enter the secret code to continue:</p>
+            <input type="password" id="reset-code" placeholder="Enter secret code...">
+            <div class="modal-buttons">
+                <button id="confirm-reset-btn" class="danger-btn">Reset Everything</button>
+                <button id="cancel-reset-btn">Cancel</button>
+            </div>
         </div>
     </div>
 
