--- a/index.html
+++ b/index.html
@@ -38,8 +38,10 @@
                 <h2><i class="fas fa-fire"></i> Your Quests</h2>
                 <div class="add-quest">
                     <input type="text" id="quest-name" placeholder="Enter quest name...">
-                    <input type="number" id="quest-xp" placeholder="XP reward" min="1" value="10">
-                    <button id="add-quest-btn"><i class="fas fa-plus"></i> Add</button>
+                    <div class="quest-reward-group">
+                        <input type="number" id="quest-xp" placeholder="XP reward" min="1" value="10">
+                        <button id="add-quest-btn"><i class="fas fa-plus"></i> Add</button>
+                    </div>
                 </div>
                 
                 <div class="quests-list" id="quests-list">
