added centiseconds to the stopwatch and some achievement additions and fixes

--- a/index.html
+++ b/index.html
@@ -48,13 +48,13 @@
                     <!-- Quests will be added here dynamically -->
                 </div>
             </div>
-            
+
             <div class="active-quest-panel" id="active-quest-panel">
                 <h2><i class="fas fa-sword"></i> Active Quest</h2>
                 <div id="no-active-quest" class="empty-state">No active quest. Start one from your quests list!</div>
                 <div id="quest-details" class="hidden">
                     <h3 id="active-quest-name">Quest Name</h3>
-                    <div id="stopwatch">00:00:00</div>
+                    <div id="stopwatch">00:00:00:00</div> <!-- Updated format -->
                     <div class="quest-controls">
                         <button id="complete-quest-btn"><i class="fas fa-check"></i> Complete Quest</button>
                     </div>
