--- a/index.html
+++ b/index.html
@@ -104,6 +104,6 @@
         </div>
     </div>
 
-    <script src="renderer.js"></script>
+    <script src="./renderer.js"></script>
 </body>
 </html>
