smol change. cut the 'the'

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="container">
         <header>
-            <h1> AlphaFocus <span>- Level Up Your Brain!</span></h1>
+            <h1> AlphaFocus</h1>
         </header>
         
         <div class="stats-panel">
